<resources>
    <string name="app_name">i大工+</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">服务大厅</string>
    <string name="title_notifications">消息</string>
    <string name="title_me">我的</string>
    <string name="me_Info">个人资料</string>
    <string name="me_Security">账号安全</string>
    <string name="me_Card">我的证件</string>
    <string name="me_Gift">积分换礼</string>
    <string name="me_Feedback">问题反馈</string>
    <string name="me_Setting">设置</string>
    <string name="me_About">关于i大工+</string>
    <string name="me_Head">用户头像</string>
    <string name="me_Header">我的背景图片</string>
    <string name="title_activity_settings">设置</string>

    <!-- Preference Titles -->
    <string name="messages_header">账户设置</string>
    <string name="other_header">程序设置</string>

    <!-- Account Preferences -->
    <string name="Username_title">学工号</string>
    <string name="Password_title">统一认证密码</string>
    <string name="Network_title">校园网密码</string>
    <string name="MailAddress_title">校园邮箱地址</string>
    <string name="MailPassword_title">校园邮箱密码</string>

    <!-- Other Preferences -->
    <string name="Mode_title">登录认证模式</string>
    <string name="Theme_title">暗色模式</string>
    <string name="login_title">尝试自动登录校园网</string>
    <string name="login_on">在检测到连接到校园网且需要登陆的时候自动执行登录（开发区）</string>
    <string name="login_off">不执行自动登录</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
i大工+服务协议\n
【首部及导言】\n
欢迎您使用i大工+软件及服务！\n
为使用i大工+产品体系和软件系统（以下简称“本软件”）及服务，您应当阅读并遵守《i大工+软件许可及服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议，并选择接受或不接受。限制、免责条款可能以加粗形式提示您注意。\n
除非您已阅读并接受本协议所有条款，否则您无权下载、安装或使用本软件及相关服务。您的下载、安装、使用、登录等行为即视为您已阅读并同意上述协议的约束。\n
如果您未满18周岁，请在法定监护人的陪同下阅读本协议及其它上述协议，并特别注意未成年人使用条款。\n
一、【协议的范围】\n
1.1 【协议适用主体范围】\n
本协议是您与i大工+之间关于您下载、安装、使用、复制本软件，以及使用i大工+相关服务所订立的协议。i大工+是对i大工及其附属功能的增强版非官方软件。\n
1.2 【协议关系及冲突条款】\n
本协议内容同时包括i大工+可能不断发布的关于本服务的相关协议、业务规则等内容。上述内容一经正式发布，即为本协议不可分割的组成部分，您同样应当遵守。\n
二、【关于本服务】\n
2.1 【本服务的内容】\n
本服务内容是指i大工+向用户提供的便捷工具等功能或内容的软件许可及服务（以下简称“本服务”）。\n
2.2 【本服务的形式】\n
2.2.1 您使用本服务需要下载i大工+客户端软件，对于这些软件，i大工+给予您一项个人的、不可转让及非排他性的许可。您仅可为访问或使用本服务的目的而使用这些软件及服务。\n
2.2.2 本服务中i大工+软件提供包括Android应用版本。\n
2.3 【本服务许可的范围】\n
2.3.1 i大工+给予您一项个人的、不可转让及非排他性的许可，以使用本软件。您可以为非商业目的在单一台终端设备上安装、使用、显示、运行本软件。\n
2.3.2 您可以为使用本软件及服务的目的复制本软件的一个副本，仅用作备份。备份副本必须包含原软件中含有的所有著作权信息。\n
2.3.3 本条及本协议其他条款未明示授权的其他一切权利仍由i大工+保留，您在行使这些权利时须另外取得i大工+的书面许可。i大工+如果未行使前述任何权利，并不构成对该权利的放弃。\n
三、【软件的获取】\n
3.1 您可以直接从GitHub Release上下载本软件。\n
3.2 如果您从第三方获取本软件或与本软件名称相同的安装程序，i大工+无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。\n
四、【软件的安装与卸载】\n
4.1 i大工+的电脑版为DLUTToolBoxV2，您可以在Github上搜索下载\n
4.2 下载安装程序后，您需要按照该程序提示的步骤正确安装。\n
4.3 为提供更加优质的服务，在本软件安装时i大工+可能需要您授予一些权限。\n
4.4 如果您不再需要使用本软件或者需要安装新版软件，可以自行卸载。如果您愿意帮助i大工+改进产品服务，请告知卸载的原因。\n
五、【软件的更新】\n
5.1 为了改善用户体验、完善服务内容，i大工+将不断努力开发新的服务，并为您不时提供软件更新（这些更新可能会采取软件替换、修改、功能强化、版本升级等形式）。\n
5.2 为了保证本软件及服务的安全性和功能的一致性，i大工+有权不经向您特别通知而对软件进行更新，或者对软件的部分功能效果进行改变或限制。\n
5.3 本软件新版本发布后，旧版本的软件可能无法使用。i大工+不保证旧版本软件继续可用及相应的客户服务，请您随时核对并下载最新版本。\n
六、【用户个人信息保护】\n\n
6.1 保护用户个人信息是i大工+的一项基本原则，i大工+将会采取合理的措施保护用户的个人信息。i大工+不会向第三方公开、透露用户个人信息。所有信息均储存在您手机本地应用程序私有目录。\n
6.2 您在注册帐号或使用本服务的过程中，需要提供一些必要的信息，例如：大连理工大学统一身份认证账户和密码，校园网密码、校园网邮箱账户密码等。\n
6.3 您可随时浏览、修改自己提交的信息。\n
6.4 i大工+将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。\n
七、【主权利义务条款】\n
7.1 【帐号使用规范】\n
7.1.1 您在使用本服务前需要注册一个i大工帐号。i大工帐号可通过学工号进行注册,并可在注册成功后绑定手机号码、邮箱帐号等。i大工+有权根据用户需求或产品需要对帐号注册和绑定的方式进行变更，关于您使用帐号的具体规则，请遵守相关帐号使用协议以及i大工为此发布的专项规则。\n
7.1.2 i大工帐号的所有权归i大工所有，用户直接或间接完成注册手续后，仅获得i大工帐号的使用权，且该使用权仅属于初始注册人。同时，初始注册人不得赠与、借用、租用、转让或售卖i大工帐号或者以其他方式许可非初始注册人使用i大工帐号。非初始注册人不得通过受赠、继承、承租、受让或者其他任何方式使用i大工账号。\n
7.1.3 用户有责任妥善保管注册帐户信息及帐户密码的安全，用户需要对注册帐户以及密码下的行为承担法律责任。用户同意在任何情况下不向他人透露帐户及密码信息。当在您怀疑他人在使用您的帐号时，您应立即联系大连理工大学相关管理部门进行处理。\n
7.1.4 用户可以对i大工+帐号的密码进行设置。\n
7.2 【用户注意事项】\n
7.2.1 您理解并同意：为了向您提供有效的服务，本软件会利用您移动通讯终端的处理器和带宽等资源。本软件使用过程中可能产生数据流量的费用，用户需自行向运营商了解相关资费信息，并自行承担相关费用。\n
7.2.2 您理解并同意：本软件的某些功能可能会让第三方知晓用户的信息，例如：用户的i大工好友可以查询用户头像、名字、等可公开的个人资料。\n
7.2.3 您在使用本软件某一特定服务时，该服务可能会另有单独的协议、相关业务规则等（以下统称为“单独协议”），您在使用该项服务前请阅读并同意相关的单独协议。\n
7.2.4 您理解并同意i大工+将会尽其商业上的合理努力保障您在本软件及服务中的数据存储安全，但是，i大工+并不能就此提供完全保证，包括但不限于以下情形：\n
7.2.4.1 i大工+不对您在本软件及服务中相关数据的删除或储存失败负责；\n
7.2.4.2 i大工+有权根据实际情况自行决定单个用户在本软件及服务中数据的最长储存期限，并在服务器上为其分配数据最大存储空间等。您可根据自己的需要自行备份本软件及服务中的相关数据；\n
7.2.5 用户在使用本软件及服务时，须自行承担如下来自i大工+不可掌控的风险内容，包括但不限于：\n
7.2.5.1 由于不可抗拒因素可能引起的个人信息丢失、泄漏等风险；\n
7.2.5.2 用户必须选择与所安装手机相匹配的软件版本，否则，由于软件与手机型号不相匹配所导致的任何问题或损害，均由用户自行承担；\n
7.2.5.3 用户在使用本软件访问第三方网站时，因第三方网站及相关内容所可能导致的风险，由用户自行承担；\n
7.2.5.4 用户发布的内容被他人转发、分享，因此等传播可能带来的风险和责任；\n
7.2.5.5 由于无线网络信号不稳定、无线网络带宽小等原因，所引起的i大工+登录失败、资料同步不完整、页面打开速度慢等风险。\n
7.3 【第三方产品和服务】\n
7.3.1 您在使用本软件第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的用户协议。i大工+和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。\n
7.3.2 因用户使用本软件或要求i大工+提供特定服务时，本软件可能会调用第三方系统或者通过第三方支持用户的使用或访问，使用或访问的结果由该第三方提供，i大工+不保证通过第三方提供服务及内容的安全性、准确性、有效性及其他不确定的风险，由此若引发的任何争议及损害，与i大工+无关，i大工+不承担任何责任。\n
八、【用户行为规范】\n
8.1 【信息内容规范】\n
8.1.1 本条所述信息内容是指用户使用本软件及服务过程中所制作、复制、发布、传播的任何内容，包括但不限于i大工+帐号头像、名字、用户说明等注册信息，或文字、语音、图片等发送、回复、朋友圈图文和相关链接页面，以及其他使用i大工+帐号或本软件及服务所产生的内容。\n
8.1.2 您理解并同意，i大工+一直致力于为用户提供文明健康、规范有序的网络环境，您不得利用i大工+帐号或本软件及服务制作、复制、发布、传播侵犯其他用户或第三方合法权益的内容，包括但不限于：\n
8.1.2.1 发布、传送、传播、储存违反国家法律、危害国家安全统一、社会稳定、公序良俗、社会公德以及侮辱、诽谤、淫秽或含有任何性或性暗示的、暴力的内容；\n
8.1.2.2 发布、传送、传播、储存侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的内容；\n
8.1.2.3 涉及他人隐私、个人信息或资料的；\n
8.1.2.4 发表、传送、传播骚扰、广告信息及垃圾信息；\n
8.2 【软件使用规范】\n
除非法律允许或i大工+书面许可，您使用本软件过程中不得从事下列行为：\n
8.2.1 删除本软件及其副本上关于著作权的信息；\n
8.2.2 对本软件进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现本软件的源代码；\n
8.2.3 对i大工+拥有知识产权的内容进行使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版、建立镜像站点等；\n
8.2.4 通过修改或伪造软件运行中的指令、数据，增加、删减、变动软件的功能或运行效果，或者将用于上述用途的软件、方法进行运营或向公众传播，无论这些行为是否为商业目的；\n
8.3 【服务运营规范】\n
除非法律允许或书面许可，您使用本服务过程中不得从事下列行为：\n
8.3.1 提交、发布虚假信息，或冒充、利用他人名义的；\n
8.3.2 诱导其他用户点击链接页面或分享信息的；\n
8.3.3 虚构事实、隐瞒真相以误导、欺骗他人的；\n
8.3.4 侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的；\n
8.3.5 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；\n
8.4 【对自己行为负责】\n
您充分了解并同意，您必须为自己注册帐号下的一切行为负责，包括您所发表的任何内容以及由此产生的任何后果。您应对本服务中的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。i大工+无法且不会对因前述风险而导致的任何损失或损害承担责任。\n
8.5 【违约处理】\n
8.5.1 如果i大工+发现或收到他人举报或投诉用户违反本协议约定的，i大工及大连理工大学相关管理部门有权不经通知随时对相关内容进行删除、屏蔽，并视行为情节对违规帐号处以包括但不限于警告、限制或禁止使用部分或全部功能、帐号封禁直至注销的处罚，并公告处理结果。\n
8.5.2 您理解并同意，i大工及大连理工大学相关管理部门有权依合理判断对违反有关法律法规或本协议规定的行为进行处罚，对违法违规的任何用户采取适当的法律行动，并依据法律法规保存有关信息向有关部门报告等，用户应独自承担由此而产生的一切法律责任。\n
8.5.3 您理解并同意，因您违反本协议或相关服务条款的规定，导致或产生第三方主张的任何索赔、要求或损失，您应当独立承担责任；i大工+因此遭受损失的，您也应当一并赔偿。\n
九、【知识产权声明】\n
9.1 i大工是本软件的知识产权权利人。本软件的一切著作权、商标权、专利权、商业秘密等知识产权，以及与本软件相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国法律法规和相应的国际条约保护，i大工享有上述知识产权，但相关权利人依照法律规定应享有的权利除外。\n
9.2 未经i大工+或相关权利人书面同意，您不得为任何商业或非商业目的自行或许可任何第三方实施、利用、转让上述知识产权。\n
十、【终端安全责任】\n
10.1 您理解并同意，本软件同大多数互联网软件一样，可能会受多种因素影响，包括但不限于用户原因、网络服务质量、社会环境等；也可能会受各种安全问题的侵扰，包括但不限于他人非法利用用户资料，进行现实中的骚扰；用户下载安装的其他软件或访问的其他网站中可能含有病毒、木马程序或其他恶意程序，威胁您的终端设备信息和数据安全，继而影响本软件的正常使用等。因此，您应加强信息安全及个人信息的保护意识，注意密码保护，以免遭受损失。\n
10.2 您不得制作、发布、使用、传播用于窃取i大工+帐号及他人个人信息、财产的恶意程序。\n
10.3 维护软件安全与正常使用是i大工+和您的共同责任，i大工+将按照行业标准合理审慎地采取必要技术措施保护您的终端设备信息和数据安全，但是您承认和同意i大工+并不能就此提供完全保证。\n
10.4 在任何情况下，您不应轻信借款、索要密码或其他涉及财产的网络信息。涉及财产操作的，请一定先核实对方身份，并请经常留意i大工+有关防范诈骗犯罪的提示。\n
十一、【第三方软件或技术】\n
11.1 本软件可能会使用第三方软件或技术（包括本软件可能使用的开源代码和公共领域代码等，下同），这种使用已经获得合法授权。\n
11.2 本软件如果使用了第三方的软件或技术，i大工+将按照相关法规或约定，对相关的协议或其他文件，可能通过本协议附件、在本软件安装包特定文件夹中打包等形式进行展示，它们可能会以“软件使用许可协议”、“授权协议”、“开源代码许可证”或其他形式来表达。前述通过各种形式展现的相关协议或其他文件，均是本协议不可分割的组成部分，与本协议具有同等的法律效力，您应当遵守这些要求。如果您没有遵守这些要求，该第三方或者国家机关可能会对您提起诉讼、罚款或采取其他制裁措施，并要求i大工+给予协助，您应当自行承担法律责任。\n
11.3 如因本软件使用的第三方软件或技术引发的任何纠纷，应由该第三方负责解决，i大工+不承担任何责任。i大工+不对第三方软件或技术提供客服支持，若您需要获取支持，请与第三方联系。\n
十二、【其他】\n
12.1 您使用本软件即视为您已阅读并同意受本协议的约束。i大工+有权在必要时修改本协议条款。您可以在本软件的最新版本中查阅相关协议条款。本协议条款变更后，如果您继续使用本软件，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用本软件。\n
12.2 本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。\n
12.3 若您和i大工+之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。\n
12.4 本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。\n
12.5 本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。\n
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_security">SecurityActivity</string>
    <string name="notadded">添加</string>
    <string name="added">已添加</string>
    <string name="title_activity_app_detail">AppDetailActivity</string>
    <string name="addnotice">添加至我的服务</string>
    <string name="open">打开</string>
    <string name="all">全部</string>
    <string name="study">学习类</string>
    <string name="office">工作类</string>
    <string name="life">生活类</string>
    <string name="social">社交类</string>
    <string name="game">游戏类</string>
    <string name="UserAgent">Mozilla/5.0 (Linux; Android 10; EBG Build/HUAWEIEBG; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/88.0.4324.93 Mobile Safari/537.36 weishao(3.2.7.74623)</string>
    <string name="PCUserAgent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.5005.124 Safari/537.36 Edg/102.0.1245.44</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="clean_cache">清除缓存</string>
    <string name="my_service">我的服务</string>
    <string name="add_more">前往服务大厅，添加更多</string>
    <string name="login_account_hint">职工号/学号</string>
    <string name="login_assistant">代登录助手</string>
    <string name="login_btn">登 录</string>
    <string name="login_delete_account">删除账号</string>
    <string name="login_delete_account_history">删除账号及相关记录</string>
    <string name="login_input_account">用户名不能为空</string>
    <string name="login_input_password">密码不能为空</string>
    <string name="login_parent_account_hint">学生学号</string>
    <string name="login_password_hint">密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="feedback_login">问题反馈</string>
    <string name="back_to">返回</string>
    <string name="sso">统一身份认证</string>
    <string name="empty">暂无搜索结果</string>
    <string name="newnotice">NEW</string>
    <string name="invite">邀请好友</string>
    <string name="versionintro">版本介绍</string>
    <string name="serviceprotocal">服务协议</string>
    <string name="privac">隐私政策</string>
    <string name="default_coins">0</string>
    <string name="defaultname">学生姓名</string>
    <string name="defaultorgname">学院名称</string>
    <string name="parentbind">家校通</string>
</resources>